--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>豆印</title>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='site.css') }}" />
 </head>
 
 <body>
