Include optional categories

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,16 @@
     <div class="box">
       <form id="yin" name="yin" action="/yin" method="post">
         <input type="text" id="account" name="account" maxlength="40" title="请输入豆瓣账号" placeholder="豆瓣账号">
-        <input type="submit" id="submit" value="印">
+        <input type="submit" id="submit" value="→" title="封印！">
+
+        <ul>
+          {% for c, v in category.items() %} {% if v.enable %}
+          <li>
+            <input id={{c}} type="checkbox" name="include" value={{c}}>
+            <label for={{c}}>{{v.display}}</label>
+          </li>
+          {% endif %} {% endfor %}
+        </ul>
       </form>
     </div>
   </div>
