Realtime progress using EventSource

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,8 @@
   <div class="main">
     <div class="box">
       <form id="yin" name="yin" action="/yin" method="post">
-        <input type="text" id="account" name="account" maxlength="40" title="请输入豆瓣账号" placeholder="豆瓣账号">
-        <input type="submit" id="submit" value="→" title="封印！">
-
+        <input id="account" type="text" name="account" maxlength="40" title="请输入豆瓣账号" placeholder="豆瓣账号">
+        <button id="archive" type="submit" name="submit" value="archive">→</button>
         <ul>
           {% for c, v in category.items() %} {% if v.enable %}
           <li>
